--- a/style.css
+++ b/style.css
@@ -849,9 +849,9 @@ div.wpcf7-mail-sent-ok{
 }
 /** Reescribir BXSlider **/
 .bx-wrapper{
-    background: transparent;
-    border: none;
-    box-shadow:none;
+    background: transparent !important;
+    border: none !important;
+    box-shadow:none !important;
 }
 .bx-wrapper .bx-pager.bx-default-pager a, 
 .bx-wrapper .bx-pager.bx-default-pager a:hover{
